# battlemetrics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  publish.yml  qodana_code_quality.yml  release.yml
battlemetrics/: __init__.py  banlist.py  client.py  errors.py  flag.py  http.py  note.py  organization.py  player.py  requirements.txt  server.py  session.py  utils.py
battlemetrics/models/: ban.py  banlist.py  base.py  flag.py  game.py  note.py  organization.py  player.py  query.py  server.py  session.py
battlemetrics/types/: __init__.py  banlist.py  flag.py  misc.py  note.py  organization.py  player.py  server.py  session.py
examples/: list_servers.py  player_search.py  server_info.py
