[tool.poetry]
name = "battlemetrics"
description = "Asyncronous Python wrapper for the BattleMetrics API."
# Placeholder, modified by dynamic-versioning.
version = "0.0.0"
authors = ["Gnomeslayer <declan.otten@live.com.au>", "OseSem <sem@osesem.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"
pyright = "1.1.383"
taskipy = "1.13.0"
python-dotenv = "1.0.1"


[tool.poetry.urls]
"Homepage" = "https://github.com/Gnomeslayer/battlemetrics"
"Issue Tracker" = "https://github.com/Gnomeslayer/battlemetrics/issues"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
# If v2.6.0 tag -> 2.6.0
# If v2.6.0 tag and not at tag -> 2.6.0+g{hash}
# If v3.0.0a tag -> v3.0.0a0
# If v3.0.0a tag and not at tag -> 3.0.0a{distance}+g{hash}
format-jinja = """
{%- if distance == 0 -%}
    {{ serialize_pep440(base, stage, revision) }}
{%- elif stage is none -%}
    {{ serialize_pep440(base, stage, revision, metadata=["g"+commit]) }}
{%- else -%}
    {{ serialize_pep440(base, stage, distance, metadata=["g"+commit]) }}
{%- endif -%}
"""
style = "pep440"
strict = true

[tool.poetry-dynamic-versioning.substitution]
patterns = [
    { value = "(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])" },
    { value = "(^version_info\\s*(?::.*?)?=\\s*\\S*?\\()[^)]*(\\))", mode = "version_info" },
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.taskipy.tasks]
black = { cmd = "task lint black", help = "Run black" }
isort = { cmd = "task lint isort", help = "Run isort" }
lint = { cmd = "pre-commit run --all-files", help = "Check all files for linting errors" }
precommit = { cmd = "pre-commit install --install-hooks", help = "Install the precommit hook" }
pyright = { cmd = "dotenv -f task.env run -- python -m pyright", help = "Run pyright" }

[tool.pyright]
typeCheckingMode = "strict"

reportReturnType = false
reportUnnecessaryComparison = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["ALL"]
lint.ignore = [
    "ERA001", # commented out code.
    "D100",   # docstrings in public modules.
    "D104",   # docstrings in public package.
    "ANN101", # self type hint.
    "ANN401", # Any type hint.
    "N818",   # Error suffix.

    "PLR0913", # Too many arguments.

    "TD002",  # Author in TODO
    "TD003",  # Issue Link in TODO
    "FIX002", # TODO Found
]

[tool.ruff.lint.per-file-ignores]
"battlemetrics/__init__.py" = [
    "F403", # Wildcard imports
]
"battlemetrics/http.py" = [
    "PLR2004", # Constant variable
]
"battlemetrics/types/*.py" = [
    "N815", # Lowercase variable
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 6
